# ticket-system

./: .gitignore  README.md  docker-compose.yml  start.sh  Практика.docx
.github/workflows/: ci.yml
backend/: .env  Dockerfile  README.md  go.mod  go.sum
backend/cmd/api/: main.go
backend/docs/: docs.go
backend/internal/config/: config.go
backend/internal/delivery/: auth_handler.go  dictionary_handler.go  dictionary_handler_test.go  ticket_attachment_handler.go  ticket_comment_handler.go  ticket_handler.go  ticket_handler_test.go  ticket_history_handler.go  user_handler.go  user_handler_test.go
backend/internal/domain/: department.go  permission.go  role.go  role_permission.go  ticket.go  ticket_attachment.go  ticket_comment.go  ticket_history.go  ticket_priority.go  ticket_repository.go  ticket_status.go  user.go
backend/internal/middleware/: jwt.go  logger.go
backend/internal/model/: auth.go  dictionary.go  error.go
backend/internal/repository/: db.go  department_repository.go  department_repository_test.go  ticket_attachment_repository.go  ticket_attachment_repository_test.go  ticket_comment_repository.go  ticket_comment_repository_test.go  ticket_history_repository.go  ticket_history_repository_test.go  ticket_priority_repository.go  ticket_priority_repository_test.go  ticket_repository.go  ticket_repository_test.go  ticket_status_repository.go  ticket_status_repository_test.go  user_repository.go  user_repository_test.go
backend/migrations/: 001_init.sql  001_init_schema.sql  001_init_schema.up.sql  002_users_and_tickets.sql  002_users_and_tickets.up.sql  003_ticket_history.sql  003_ticket_history.up.sql  004_ticket_comments.sql  004_ticket_comments.up.sql  005_ticket_attachments.sql  005_ticket_attachments.up.sql  010_indexes.sql  020_triggers.sql  030_ddl_audit.sql  030_ddl_audit.up.sql  040_materialized_views.up.sql
frontend/: CMakeLists.txt  config.ini
frontend/src/: config.cpp  config.h  dictionary_model.cpp  dictionary_model.h  main.cpp  mainwindow.cpp  mainwindow.h  ticket_model.cpp  ticket_model.h
frontend/src/models/: attachment_model.cpp  attachment_model.h  comment_model.cpp  comment_model.h  ticket_model.cpp  ticket_model.h
frontend/src/network/: api_client.cpp  api_client.h
frontend/src/views/: login_dialog.cpp  login_dialog.h  register_dialog.cpp  register_dialog.h  ticket_dialog.cpp  ticket_dialog.h  ticket_table_view.cpp  ticket_table_view.h
(+15 files in other folders)
